--- a/public/now.json
+++ b/public/now.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "name": "bookmarks-app",
+    "name": "noteful app",
     "routes": [
         {
             "handle": "filesystem"
